codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.121.0)                                               │
│                                                                           │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date             │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries detailed) │
│  Directory: [[workspace]]                                                 │
│  Permissions:      Workspace (Ask for approval)                           │
│  Agents.md:        <none>                                                 │
│                                                                           │
│  Token usage:      1.9K total  (1K input + 900 output)                    │
│  Context window:   100% left (2.25K used / 272K)                          │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)         │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24)         │
╰───────────────────────────────────────────────────────────────────────────╯
